Thu, 22 Nov 2007 21:52:35 +0100 <thp@perli.net>
Don't send Referer header when downloading episodes

	* src/gpodder/download.py: Some podcasts now implement an
	"anti-bandwidth-theft" code that should provide other websites from
	not linking to the episodes; as we have sent a Referer header
	containing the RSS feed URL, this causes problems; Referer header
	sending is therefore disabled now

Sun, 18 Nov 2007 15:33:50 +0100 <thp@perli.net>
TODO items from Katy G. B.

	* TODO: Updated TODO list

Sat, 17 Nov 2007 18:38:36 +0100 <thp@perli.net>
Backwards-compatibility for PyGTK less than 2.12 (for GtkTooltip)

	* src/gpodder/gui.py: Do not hook up tooltip handlers when we are
	using PyGTK less than 2.12 (which introduced the gtk.Tooltip API)

Thu, 15 Nov 2007 11:07:42 +0100 <thp@perli.net>
Check free disk space before copying files to iPod

	* src/gpodder/libipodsync.py: Check if the iPod's filesystem has
	enough free disk space before copying files over to it, as to not
	corrupt the iTunesDB in certain situations and fail when disk is full;
	thanks to Nicolas Quienot <niqooo@gmail.com> for the bug report
	* src/gpodder/util.py: Add get_free_disk_space() function that
	calculates the free (user-available) disk space on a given path

Wed, 14 Nov 2007 21:55:18 +0100 <thp@perli.net>
Add informative tooltips to channel navigator

	* src/gpodder/gui.py: Add tooltips to channel navigator that show a
	bigger cover image, the title, description, url and used disk space
	* src/gpodder/libpodcasts.py: Add save_dir_size property to
	podcastChannel that contains the disk usage of the channel's save_dir;
	this can be manually updated by calling update_save_dir_size() and
	will automatically be updated when the GUI code hooks into the
	channel; also add get_cover_pixbuf() that returns a pixbuf of the
	cover for a given size or None if there is no valid cover file

Wed, 14 Nov 2007 19:19:11 +0100 <thp@perli.net>
Slipstream code (enumerate instead of simple position tracking)